# raytracing

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  cabal-profile.project  cabal.project  cabal.project.freeze  package.yaml  raytracing.cabal
.github/workflows/: build.yml
app/: blue-to-white.hs  camera.hs  diffuse.hs  gradient-with-simple-sphere.hs  metal-spheres.hs  metals-and-glasses.hs  next-week.hs  one-weekend-finale.hs  spheres-antialias.hs  spheres.hs
app/next-week/: Main.hs  Options.hs
bench/: bench.hs
bench-results/: bench-deterministic.csv  bench-effectful.csv  bench-maybet-state.csv
src/Data/: Avg.hs
src/Data/Array/Accelerate/Linear/: Affine.hs
src/Data/Image/: Antialiasing.hs  Types.hs
src/Data/Image/Format/: PPM.hs
src/Data/Vector/: Shuffle.hs
src/Linear/: Angle.hs  Direction.hs
src/Numeric/: Utils.hs
src/RayTracing/: BVH.hs  BoundingBox.hs  Camera.hs  Object.hs  Ray.hs  Scene.hs  Texture.hs
src/RayTracing/Object/: Classes.hs  List.hs  Material.hs  Shape.hs  Sphere.hs  StdShape.hs
src/RayTracing/Object/Shape/: Box.hs  Class.hs  ConstantMedium.hs  Plane.hs  Rotate.hs  Sphere.hs  StdShape.hs  Translate.hs
src/RayTracing/Texture/: Image.hs
src/RayTracing/Texture/Noise/: Perlin.hs
src/System/Random/: Effectful.hs  Orphans.hs  Utils.hs
src/System/Random/Stateful/: STUnbox.hs
test/RayTracing/: BoundingBoxSpec.hs
