cabal-version: 3.4
name: raytracing
version: 0.1.0.0
description: Please see the README on GitHub at <https://github.com/githubuser/raytracing#readme>
homepage: https://github.com/githubuser/raytracing#readme
bug-reports: https://github.com/githubuser/raytracing/issues
author: Author name here
maintainer: example@example.com
copyright: 2022 Author name here
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/githubuser/raytracing

common defaults
  default-language: GHC2021
  autogen-modules: Paths_raytracing
  other-modules: Paths_raytracing
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

  build-depends: base >=4.7 && <5

common exes
  ghc-options:
    -O2
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    lens,
    linear,
    massiv,
    massiv-io,
    raytracing,
    rio,

common rendering-apps
  import: exes
  build-depends:
    bytestring,
    bytestring-trie,
    generic-lens,
    optparse-applicative,
    random,

library
  import: defaults
  -- cabal-gild: discover src
  exposed-modules:
    Data.Avg
    Data.Image.Antialiasing
    Data.Image.Types
    Data.Vector.Shuffle
    Linear.Angle
    Linear.Direction
    Numeric.Utils
    RayTracing.BVH
    RayTracing.BoundingBox
    RayTracing.Camera
    RayTracing.Object
    RayTracing.Object.Material
    RayTracing.Object.Shape
    RayTracing.Object.Shape.Box
    RayTracing.Object.Shape.Class
    RayTracing.Object.Shape.ConstantMedium
    RayTracing.Object.Shape.Plane
    RayTracing.Object.Shape.Rotate
    RayTracing.Object.Shape.Sphere
    RayTracing.Object.Shape.StdShape
    RayTracing.Object.Shape.Translate
    RayTracing.Ray
    RayTracing.Scene
    RayTracing.Texture
    RayTracing.Texture.Image
    RayTracing.Texture.Noise.Perlin
    System.Random.Orphans
    System.Random.Stateful.STUnbox
    System.Random.Utils

  hs-source-dirs: src
  build-depends:
    adjunctions,
    base >=4.7 && <5,
    distributive,
    fmlist,
    foldl,
    generic-lens,
    hybrid-vectors,
    lens,
    linear,
    massiv,
    massiv-io,
    random,
    rio,
    semigroupoids,
    splitmix,
    strict,
    transformers,
    vector,
    vector-algorithms,
    vector-th-unbox,

executable blue-to-white
  import: defaults, exes
  main-is: blue-to-white.hs
  hs-source-dirs: app

executable camera
  import: defaults, rendering-apps
  main-is: camera.hs
  hs-source-dirs: app
  build-depends:
    integer-roots,
    scientific,
    transformers,

executable diffuse
  import: defaults, rendering-apps
  main-is: diffuse.hs
  hs-source-dirs: app

executable gradient-with-simple-sphere
  import: defaults, exes
  main-is: gradient-with-simple-sphere.hs
  hs-source-dirs: app
  build-depends:
    random,
    transformers,

executable metal-spheres
  import: defaults, rendering-apps
  main-is: metal-spheres.hs
  hs-source-dirs: app
  build-depends: integer-roots

executable metals-and-glasses
  import: defaults, rendering-apps
  main-is: metals-and-glasses.hs
  hs-source-dirs: app
  build-depends: integer-roots

executable next-week
  import: defaults, rendering-apps
  main-is: Main.hs
  other-modules: Options
  hs-source-dirs: app/next-week
  build-depends:
    barbies,
    fmlist,
    higgledy,
    integer-roots,
    mmorph,
    named,
    scientific,
    strict,
    transformers,

executable one-weekend-finale
  import: defaults, rendering-apps
  main-is: one-weekend-finale.hs
  hs-source-dirs: app
  build-depends:
    fmlist,
    integer-roots,
    scientific,
    strict,
    transformers,

executable spheres
  import: defaults, exes
  main-is: spheres.hs
  hs-source-dirs: app
  build-depends:
    random,
    transformers,

executable spheres-antialias
  import: defaults, exes
  main-is: spheres-antialias.hs
  hs-source-dirs: app
  build-depends:
    generic-lens,
    random,
    transformers,

test-suite raytracing-test
  import: defaults
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules: RayTracing.BoundingBoxSpec
  hs-source-dirs: test
  build-tool-depends:
    tasty-discover:tasty-discover

  build-depends:
    raytracing,
    tasty,
    tasty-inspection-testing,

benchmark raytracing-bench
  import: defaults
  type: exitcode-stdio-1.0
  main-is: bench.hs
  hs-source-dirs: bench
  build-tool-depends: tasty-discover:tasty-discover
  build-depends:
    integer-roots,
    lens,
    linear,
    massiv,
    massiv-io,
    random,
    raytracing,
    tasty,
    tasty-bench,
